# autoware.universe-carla-ros-bridge

./: Analysis_AckermannControl.md  How to run cala-ros-bridge with ROS Galactic.md  README.md  carla_ackermann_control_node.py  control_command_notes.md  demo2_tasks.md  learning_simple_planning_simulator.md  op_bridge_learning.md  sensors.md
autoware_auto_vehicle_msgs/: CMakeLists.txt  package.xml
autoware_auto_vehicle_msgs/msg/: ControlModeReport.idl  GearReport.idl  HazardLightsReport.idl  TurnIndicatorsReport.idl
autoware_ros_bridge_carla/: CMakeLists.txt  package.xml
autoware_ros_bridge_carla/install/: local_setup.sh  setup.sh
autoware_ros_bridge_carla/install/autoware_ros_bridge_carla/share/autoware_ros_bridge_carla/: package.bash  package.zsh
autoware_ros_bridge_carla/log/: latest_build
autoware_ros_bridge_carla/src/: UdpClient  UdpClient.cpp  UdpServer  UdpServer.cpp  carla_to_autoware_vehicle_status.py  controlCommandForwarding.cpp  control_command_converter.cpp  gnss_converter.cpp  odometry_remapper.cpp  sensor_message_converter.cpp  simpledom.cpp  steering_reporter.cpp  testControlCommand.cpp  velocity_reporter.cpp
install/: local_setup.sh  setup.sh
install/autoware_auto_control_msgs/share/autoware_auto_control_msgs/: local_setup.sh  package.sh
install/autoware_auto_control_msgs/share/autoware_auto_control_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  autoware_auto_control_msgs__rosidl_generator_cppExport.cmake  autoware_auto_control_msgs__rosidl_typesupport_cExport.cmake  autoware_auto_control_msgs__rosidl_typesupport_cppExport.cmake  autoware_auto_control_msgs__rosidl_typesupport_introspection_cExport.cmake  autoware_auto_control_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/autoware_auto_vehicle_msgs/share/autoware_auto_vehicle_msgs/: package.sh
install/autoware_auto_vehicle_msgs/share/autoware_auto_vehicle_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  autoware_auto_vehicle_msgsConfig.cmake  autoware_auto_vehicle_msgs__rosidl_typesupport_cExport-noconfig.cmake  autoware_auto_vehicle_msgs__rosidl_typesupport_cppExport-noconfig.cmake  autoware_auto_vehicle_msgs__rosidl_typesupport_introspection_cExport.cmake  autoware_auto_vehicle_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/autoware_auto_vehicle_msgs/share/autoware_auto_vehicle_msgs/msg/: SteeringReport.idl  VelocityReport.idl
install/autoware_control_msgs/include/autoware_control_msgs/msg/: control.hpp  control_horizon.hpp  lateral.h  lateral.hpp  longitudinal.h  longitudinal.hpp
install/autoware_control_msgs/share/autoware_control_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autoware_control_msgs/share/autoware_control_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  autoware_control_msgs__rosidl_generator_cppExport.cmake  autoware_control_msgs__rosidl_typesupport_cExport-noconfig.cmake  autoware_control_msgs__rosidl_typesupport_cppExport-noconfig.cmake  autoware_control_msgs__rosidl_typesupport_cppExport.cmake  autoware_control_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/autoware_control_msgs/share/autoware_control_msgs/msg/: Control.idl  Lateral.idl
install/autoware_ros_bridge_carla/lib/autoware_ros_bridge_carla/: control_command_converter  gnss_converter  listener  odometry_remapper  sender  steering_reporter  velocity_reporter
install/autoware_ros_bridge_carla/share/autoware_ros_bridge_carla/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autoware_ros_bridge_carla/share/autoware_ros_bridge_carla/cmake/: autoware_ros_bridge_carlaConfig.cmake
install/carla_msgs/include/carla_msgs/msg/: carla_actor_info.hpp  carla_actor_list.hpp  carla_status.hpp  carla_traffic_light_info.hpp  carla_traffic_light_status_list.hpp  carla_walker_control.hpp  carla_world_info.hpp
install/carla_msgs/include/carla_msgs/srv/: get_blueprints.hpp  spawn_object.hpp
install/carla_msgs/share/carla_msgs/: package.bash  package.sh  package.zsh
launch/: bridge.xml  demo3.xml
launch/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
sensor_bridge/: package.xml  setup.cfg  setup.py
sensor_bridge/sensor_bridge/: gnss_bridge.py  lidar_bridge.py  new_bridge.py  sensor_bridge.py
sensor_bridge/sensor_bridge/install/: local_setup.sh  setup.ps1  setup.sh
sensor_bridge/sensor_bridge/log/: latest_build
(+95 files in other folders)
